--- a/carrinho.html
+++ b/carrinho.html
@@ -16,7 +16,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Produto 1</h5>
                       <p class="card-text">200</p>
-                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number" value="1">
+                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number">
                       <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                     </div>
                   </div>
@@ -26,7 +26,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Produto 2</h5>
                       <p class="card-text">300</p>
-                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number" value="1">
+                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number">
                       <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                     </div>
                   </div>
@@ -36,7 +36,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Produto 3</h5>
                       <p class="card-text">400</p>
-                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number" value="1">
+                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number">
                       <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                     </div>
                   </div>
@@ -46,7 +46,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Produto 4</h5>
                       <p class="card-text">500</p>
-                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number" value="1">
+                      <input  class="my-2 border border-primary rounded bg-primary bg-opacity-10 text-center text-quantidade" type="number">
                       <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
                     </div>
                   </div>
@@ -70,7 +70,7 @@
     
     
 
-    <script src="./js/script-carrinho.js"></script>
+    <script src="./script-carrinho.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
