--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
         
         <section class="container-fluid" id="container-nossos-diferenciais">
-            <div class="container py-5" >
+            <div class="container py-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-6 d-flex flex-column gap-4 align-items-center align-items-xl-start p-0">
                         <h1 class="estilo-titulo-azul ">Nossos Diferenciais</h1>
@@ -104,6 +104,40 @@
                     <div class="col-12 col-xl-6 mt-5 mt-xl-0 p-0 text-center">
                         <img src="./img/quem-somos/dog-na-cama.png" alt="">
                     </div>
+                </div>
+
+                <div class="row mt-5 g-5 m-0" id="cards-diferenciais">
+                    <div class="col col-md-6 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-01.png" alt="">
+                        <h5 class="text-center">Ambientes e Banheiras climatizadas</h5>
+                        <p class="text-center">Banho climatizado, em qualquer época do ano, com chuveiro especial e toalhas individuais</p>
+                    </div>
+                    <div class="col col-md-6 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-02.png" alt="">
+                        <h5 class="text-center">Melhor custo x benefício da região</h5>
+                        <p class="text-center">Cuide da saúde e do bem estar do seu amiguinho, com o que há de melhor</p>
+                    </div>
+                    <div class="col col-md-12 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-03.png" alt="">
+                        <h5 class="text-center">Massagem relaxante em todos os banhos</h5>
+                        <p class="text-center">Muito benéficas para os pets, as massagens também auxiliam na prevenção e combate da artrite.</p>
+                    </div>
+                    <div class="col col-md-6 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-04.png" alt="">
+                        <h5 class="text-center">Massagem relaxante em todos os banhos</h5>
+                        <p class="text-center">Muito benéficas para os pets, as massagens também auxiliam na prevenção e combate da artrite.</p>
+                    </div>
+                    <div class="col col-md-6 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-05.png" alt="">
+                        <h5 class="text-center">Equipe altamente capacitada</h5>
+                        <p class="text-center">Nossa equipe é treinada prestar todos os cuidados e carinhos que o seu pet merece.</p>
+                    </div>
+                    <div class="col col-md-12 col-xl-4 d-flex flex-column align-items-center justify-content-center">
+                        <img class="mb-4" src="./img/quem-somos/card-06.png" alt="">
+                        <h5 class="text-center">Excelência e carinho no atendimento</h5>
+                        <p class="text-center">Temos tudo o que é preciso para cuidar do seu melhor amigo: amor e respeito pelos animais.</p>
+                    </div>
+
                 </div>
             </div>
         </section>
