--- a/loja.html
+++ b/loja.html
@@ -69,7 +69,7 @@
         <div class="container-fluid p-0" id="produtos-container">
             <div class="principal-banner-text-container">
                 <h1>Produtos</h1>
-                <p>Descubra produtos essenciais e de qualidade</p>
+                <p>Descubra produtos essenciais e <br> de qualidade</p>
             </div>
         </div>
        
