--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
   </head>
   <body>
+    
     <header>
         <nav id="menu-superior">
             <ul>
@@ -29,13 +30,10 @@
                     <a href="#container-nossos-diferenciais">Diferencias</a>
                 </li>
                 <li>
-                    <a href="">Serviços</a>
+                    <a href="#nossos-servicos">Serviços</a>
                 </li>
                 <li>
                     <a href="./loja.html">Produtos</a>
-                </li>
-                <li>
-                    <a href="">Galeria</a>
                 </li>
                 <li>
                     <a href="#container-entre-em-contato">Contato</a>
@@ -66,13 +64,10 @@
                             <a href="#container-nossos-diferenciais">Nossos Diferencias</a>
                         </li>
                         <li>
-                            <a href="">Serviços</a>
+                            <a href="#nossos-servicos">Serviços</a>
                         </li>
                         <li>
                             <a href="./loja.html">Produtos</a>
-                        </li>
-                        <li>
-                            <a href="">Galeria</a>
                         </li>
                         <li>
                             <a href="#container-entre-em-contato">Contato</a>
@@ -99,8 +94,8 @@
                     <img class="mx-xl-3" src="./img/quem-somos/petshop.png" alt="">
                 </div>
                 <div class="col-12 col-xl-6 col-xxl-6 my-4 d-flex flex-column justify-content-center align-items-center align-items-xl-start">
-                    <h3 class="estilo-titulo text-start">Sobre Nós</h1>
-                    <p class="estilo-paragrafo-container">Bem-vindo ao Aqua Pet, o seu destino definitivo para tudo o que seu amigo de quatro patas precisa! Aqui, combinamos amor, experiência e uma vasta gama de produtos e serviços para garantir que seu pet receba o melhor em cuidado e bem-estar. Desde ração de alta qualidade e brinquedos divertidos até serviços de banho e tosa, nossa equipe apaixonada está pronta para oferecer um atendimento personalizado e atencioso. Em nosso petshop, cada visita é uma oportunidade de fortalecer o vínculo com seu animal de estimação, proporcionando a ele o que há de melhor. Venha nos visitar e descubra como podemos tornar a vida do seu pet ainda mais feliz e saudável!</p>
+                    <h3 class="estilo-titulo text-center m-0">Sobre Nós</h3>
+                    <p class="estilo-paragrafo-container m-0">Bem-vindo ao Aqua Pet, o seu destino definitivo para tudo o que seu amigo de quatro patas precisa! Aqui, combinamos amor, experiência e uma vasta gama de produtos e serviços para garantir que seu pet receba o melhor em cuidado e bem-estar. Desde ração de alta qualidade e brinquedos divertidos até serviços de banho e tosa, nossa equipe apaixonada está pronta para oferecer um atendimento personalizado e atencioso. Em nosso petshop, cada visita é uma oportunidade de fortalecer o vínculo com seu animal de estimação, proporcionando a ele o que há de melhor. Venha nos visitar e descubra como podemos tornar a vida do seu pet ainda mais feliz e saudável!</p>
                 </div>
             </div>  
         </section>
@@ -154,7 +149,7 @@
             </div>
         </section>
 
-        <div class="container" id="container-produtos">
+        <!-- <div class="container" id="container-produtos">
             <h1 class="m-5 text-center estilo-titulo">Para Seu Aquario</h1>
             <div class="row text-center cards-aquario my-3 p-0">
                 <div class="col col-md-6 col-xxl-4">
@@ -173,7 +168,34 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
+
+        <section class="container" id="nossos-servicos">
+            <h1 class="estilo-titulo text-center my-5">Nossos Serviços</h1>
+            <div class="row">
+                <div class="col col-xl-6 d-flex flex-column justify-content-center align-items-center my-4">
+                    <img src="./img/nossos-servicos/banho-tosa1.png" alt="">
+                    <h3 class="my-2">Banho e tosa</h3>
+                    <p class="text-center">Proporcione ao seu pet o cuidado que ele merece com nosso serviço de banho e tosa. Utilizamos produtos de alta qualidade e técnicas especializadas para garantir o conforto e a beleza do seu amigo. Agende agora e veja a transformação!</p>
+                </div>
+                <div class="col col-xl-6  d-flex flex-column justify-content-center align-items-center my-4">
+                    <img src="./img/nossos-servicos/banho-tosa1.png" alt="">
+                    <h3 class="my-2">Banho e tosa</h3>
+                    <p class="text-center">Proporcione ao seu pet o cuidado que ele merece com nosso serviço de banho e tosa. Utilizamos produtos de alta qualidade e técnicas especializadas para garantir o conforto e a beleza do seu amigo. Agende agora e veja a transformação!</p>
+                </div>
+                <div class="col col-xl-6  d-flex flex-column justify-content-center align-items-center my-4">
+                    <img src="./img/nossos-servicos/banho-tosa1.png" alt="">
+                    <h3 class="my-2">Banho e tosa</h3>
+                    <p class="text-center">Proporcione ao seu pet o cuidado que ele merece com nosso serviço de banho e tosa. Utilizamos produtos de alta qualidade e técnicas especializadas para garantir o conforto e a beleza do seu amigo. Agende agora e veja a transformação!</p>
+                </div>
+                <div class="col col-xl-6  d-flex flex-column justify-content-center align-items-center my-4">
+                    <img src="./img/nossos-servicos/banho-tosa1.png" alt="">
+                    <h3 class="my-2">Banho e tosa</h3>
+                    <p class="text-center">Proporcione ao seu pet o cuidado que ele merece com nosso serviço de banho e tosa. Utilizamos produtos de alta qualidade e técnicas especializadas para garantir o conforto e a beleza do seu amigo. Agende agora e veja a transformação!</p>
+                </div>
+            </div>
+            
+        </section>
 
         <h1 class="estilo-titulo text-center">Entre em contato</h1>
         <section class="container-fluid mb-5" id="container-entre-em-contato">
