--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     
     <header>
-        <nav id="menu-superior">
+        <nav id="menu-superior" class="fixed-top">
             <ul>
                 <li>
                     <a href="./index.html">Home</a>
